2005-04-04  Edward Hervey  <bilboed@bilboed.com>

	* test/sourcetest2.c:
	* test/pipelines.c: 
	updated to new api

	* test/Makefile.am: commenting out extra tests

	* gnl/gnlobject.c: (gnl_object_covers):	
	added gtk-doc comment

	* docs/libs/Makefile.am: corrections for distcheck

2005-03-31  Edward Hervey  <bilboed@bilboed.com>

	* docs/libs/tmpl/gnlcomposition.sgml: 
	* docs/libs/tmpl/gnlobject.sgml:
	Added documentation on GnlFindMethod, GnlCoverType and GnlDirection

2005-03-31  Edward Hervey  <bilboed@bilboed.com>

	* docs/random/design: 
	Updated explanatory documentation

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

	* docs/libs/tmpl/gnlcomposition.sgml: 

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

 	* gnl/gnl.h: 
	* gnl/gnlobject.h:
	* docs/libs/gnonlin-sections.txt:
	* docs/libs/tmpl/gnlobject.sgml:
	typo error in gnlobject.h,
	removed documentation for gnl_object_nearest_change()

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlobject.h:
	* gnl/gnlobject.c:
	Removed gnl_object_nearest_change() and cleanup of commented code

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

	* gnl/Makefile.am:
	* gnl/gnl.h:
	* gnl/gnltypes.h:
	* gnl/gnlgroup.c:
	* gnl/gnlgroup.h:
	* gnl/gnltimeline.h:
	* gnl/gnltimeline.c:
	* gnl/gnlelements.c:
	* docs/libs/gnonlin-docs.sgml:
	* docs/libs/gnonlin-sections.txt:
	* docs/libs/gnonlin.types:
	* docs/libs/tmpl/gnltimeline.sgml:
	* docs/libs/tmpl/gnlgroup.sgml:
	Removing GnlGroup

	* docs/libs/gnonlin-docs.sgml:
	* docs/libs/gnonlin-sections.txt:
	* docs/libs/tmpl/gnlobject.sgml:
	* gnl/gnlobject.h:
	* gnl/gnlobject.c:
	Removing rate control property for GnlObject

2005-03-29  Edward Hervey  <bilboed@bilboed.com>

	* test/Makefile.am: 
	added EXTRA_DIST=pipelines.c and -I$(top_srcdir) to build flags

	* gnl/Makefile.am: (gnl_headers): forgot to add gnlobject.h

	* docs/libs/Makefile.am: (GTKDOC_CFLAGS): added -I$(top_srcdir) for build

	* Makefile.am: (EXTRA_DIST): removed gnonlin.m4
